@@ -1,6 +1,7 @@
 "    "
 " "
 " >>>"
+"%@-%d"
 "%@."
 "%@/%@"
 "%lf"
@@ -9,6 +10,7 @@
 "."
 "/Library/Internet Plug-Ins"
 "/favicon.ico"
+"/tmp/%@"
 "0x0"
 "1.00"
 "1000"
@@ -17,11 +19,15 @@
 "6"
 "7"
 ";"
+"="
 "BufferTextDrawing"
+"DOCBASE"
+"IE"
 "Joy!peff"
 "Last-Modified"
 "Library/Caches/com.apple.WebKit/Icons"
 "Library/Internet Plug-Ins"
+"Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.0) Gecko/20020715"
 "NP_GetEntryPoints"
 "NP_Initialize"
 "NP_Shutdown"
@@ -51,11 +57,13 @@
 "WebElementLinkLabel"
 "WebElementLinkURL"
 "WebElementString"
+"WebElementTargetFrame"
 "WebFrameStateChangedNotification"
 "WebFrameStateCommittedPage"
 "WebFrameStateComplete"
 "WebFrameStateLayoutAcceptable"
 "WebFrameStateProvisional"
+"WebHTMLView"
 "WebHistoryEntriesChangedNotification"
 "WebHistoryItem %@"
 "WebHostToSiteURLs"
@@ -98,6 +106,7 @@
 "WebRuntimeError"
 "WebSiteURLToIconURLKey"
 "WebURLsWithTitlesPboardType"
+"\""
 "\n"
 "\n--------------------------------------------\n"
 "_CGFontCacheSetMaxSize"
@@ -112,6 +121,7 @@
 "application/x-java-applet"
 "application/x-javascript"
 "displayTitle"
+"getFountCount = %d, family = %s, traits = 0x%08x, size = %f\n"
 "htm"
 "html"
 "http"
@@ -138,20 +148,5 @@ Misc.subproj/WebKitLogging.m
 Plugins.subproj/WebPlugin.m:"main"
 WebCoreSupport.subproj/WebCookieAdapter.m:"Cookie"
 WebCoreSupport.subproj/WebTextRenderer.m:"YES"
-WebView.subproj/WebRenderNode.m
-"="
-"\""
-"WebElementTargetFrame"
-"/tmp/%@"
-"DOCBASE"
-"Optimization assumption violation:  count and glyphID count not equal - for %@ %f"
 WebView.subproj/WebPreferences.m:"latin1"
-"WebHTMLView"
-"Optimization assumption violation:  unable to cache glyph widths - for %@ %f"
-"Failed to set font (%@) ATSUStyle 0x%X"
-"%@: Don't know how to pack glyphs for font %@ %f"
-"%@: Failed to alloc ATSUStyle %d"
-"%@: Failed to create attribute group from ATSUStyle 0x%X %d"
-"%@: Don't know how to deal with font %@"
-"Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.0) Gecko/20020715"
-"CoreGraphics is missing call to disable glyph auto expiration. Pages will load more slowly."
+WebView.subproj/WebRenderNode.m
